--- a/archivist/src/main/resources/templates/assets.html
+++ b/archivist/src/main/resources/templates/assets.html
@@ -2,74 +2,16 @@
 <html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorator="layout" xmlns:th="http://www.thymeleaf.org">
 <head>
-<style>
-    .modal-body > .img-responsive {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    }
-</style>
+
 </head>
 <body>
-
 <section layout:fragment="content">
-    <p>
-    <nav class="navbar navbar-default" style="border-width:0px; border-bottom-width: 1px">
-        <div class="container-fluid">
-            <div class="navbar-header navbar-brand">
-                <span class="fa fa-file-image-o" aria-hidden="true"></span>
-                Assets
-            </div>
-            <form action="#" th:action="@{/gui/assets}" th:object="${search}" method="post" class="navbar-form navbar-center">
-                <input type="text" class="form-control" th:field="*{query}" placeholder="Search..."/>
-                <button type="submit" class="btn btn-default">Search</button>
-            </form>
-        </div>
-    </nav>
-
-    <ul class="media-list">
-        <li th:each="asset: ${result}" class="media">
-            <div class="media-left">
-                <a href="#" class="pop" th:if="${asset.get('proxies')} != null and ${asset.get('proxies').get('proxies')} != null">
-                    <img width="150"  class="media-object" th:src="${asset.get('proxies').get('proxies').get(0).uri}" />
-                </a>
-            </div>
-            <div class="media-body">
-                <h4 class="media-heading" th:text="${asset.get('source').get('filename')}"></h4>
-                <p th:text="${asset.get('keywords').get('all')}"></p>
-            </div>
-        </li>
-    </ul>
-
-    <div class="modal fade" id="imagemodal" tabindex="-1" role="dialog" aria-labelledby="imageModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                    <h4 class="modal-title" id="imageModalLabel">Preview</h4>
-                </div>
-                <div class="modal-body">
-                    <img src="" id="imagepreview" class="img-responsive"/>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                </div>
-            </div>
-        </div>
+    <div th:include="fragments/asset_menu :: asset_menu"/>
+    <br/>
+    <div class="wrapper">
+        <div th:include="fragments/asset_table :: asset_table"/>
     </div>
-
-    <script th:inline="javascript" type="text/javascript">
-    $(".pop").on("click", function() {
-        $('#imagepreview').attr('src', $(this).children().get(0).src);
-        $('#imagemodal').modal('show');
-    });
-    </script>
-</p>
 </section>
-
-<script>
-
-</script>
 
 </body>
 </html>
