--- a/archivist/src/main/resources/templates/overview.html
+++ b/archivist/src/main/resources/templates/overview.html
@@ -7,13 +7,11 @@
 </head>
 <body>
 <section layout:fragment="content">
-<p>
 
-<!-- Page Heading -->
-
+<div class="full-wrapper">
 <div class="container-fluid">
     <div class="row">
-        <div class="col-lg-3 col-md-6">
+        <div class="col-lg-3 col-md-3">
             <div class="panel panel-yellow">
                 <div class="panel-heading">
                     <div class="row">
@@ -35,7 +33,7 @@
                 </a>
             </div>
         </div>
-        <div class="col-lg-3 col-md-6">
+        <div class="col-lg-3 col-md-3">
             <div class="panel panel-green">
                 <div class="panel-heading">
                     <div class="row">
@@ -57,7 +55,7 @@
                 </a>
             </div>
         </div>
-        <div class="col-lg-3 col-md-6">
+        <div class="col-lg-3 col-md-3">
             <div class="panel panel-primary">
                 <div class="panel-heading">
                     <div class="row">
@@ -79,7 +77,7 @@
                 </a>
             </div>
         </div>
-        <div class="col-lg-3 col-md-6">
+        <div class="col-lg-3 col-md-3">
             <div class="panel panel-red">
                 <div class="panel-heading">
                     <div class="row">
@@ -102,8 +100,9 @@
             </div>
         </div>
     </div>
+
 </div>
-</p>
+</div>
 </section>
 
 </body>
