web: combined a bunch of web fragments together and updated fragment names with standard naming.

--- a/archivist/src/main/resources/templates/assets.html
+++ b/archivist/src/main/resources/templates/assets.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 <section layout:fragment="content">
-    <div th:include="fragments/asset_menu :: asset_menu"/>
+    <div th:include="fragments/assets :: menu"/>
     <br/>
     <div class="wrapper">
-        <div th:include="fragments/asset_table :: asset_table"/>
+        <div th:include="fragments/assets :: table"/>
     </div>
 </section>
 
