--- a/archivist/src/main/resources/templates/layout.html
+++ b/archivist/src/main/resources/templates/layout.html
@@ -62,6 +62,10 @@
                             <li><a href="/gui/folders"><i class="fa fa-folder fa-fw"> Folders</i></a></li>
                             <li role="separator" class="divider"></li>
                             <li><a href="/gui/plugins"><i class="fa fa-plug fa-fw"/> Plugins</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="/gui/users"><i class="fa fa-user fa-fw"/> Users</a></li>
+                            <li role="separator" class="divider"></li>
+                            <li><a href="/gui/permissions"><i class="fa fa-lock fa-fw"/> Permissions</a></li>
                         </ul>
                     </li>
                 </ul>
