--- a/archivist/src/main/resources/templates/analysts.html
+++ b/archivist/src/main/resources/templates/analysts.html
@@ -6,40 +6,35 @@
 </head>
 <body>
 <section layout:fragment="content">
-    <p>
-    <nav class="navbar navbar-default" style="border-width:0px; border-bottom-width: 1px">
-        <div class="container-fluid">
-            <div class="navbar-header navbar-brand">
-                <span class="fa fa-server2" aria-hidden="true"></span>
-                Analysts
-            </div>
-        </div>
-    </nav>
-    <div class="table-responsive">
-        <table class="table table-striped">
-            <thead>
-            <tr>
-                <th>Url</th>
-                <th>State</th>
-                <th>Threads</th>
-                <th>Queue</th>
-                <th>Free RAM</th>
-                <th>Last Update</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="an: ${analysts}">
-                <td th:text="${an.url}"></td>
-                <td th:class="${an.state.name()} == 'UP' ? success : danger" th:text="${an.state.name()}"></td>
-                <td th:text="${an.threadCount}"></td>
-                <td th:text="${an.queueSize}"></td>
-                <td th:text="${an.metrics.heap - an.metrics.heap_used}"></td>
-                <td th:text="${#dates.format(an.updatedTime, 'dd MMM yyyy HH:mm:ss')}"></td>
-            </tr>
-            </tbody>
-        </table>
+    <div class="wrapper">
+    <div th:include="fragments/analysts :: menu"/>
+    <table id="table" class="table table-striped table-condensed">
+        <thead>
+        <tr>
+            <th>Url</th>
+            <th>State</th>
+            <th>Threads</th>
+            <th>Queue</th>
+            <th>Free RAM</th>
+            <th>Last Update</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="an: ${analysts}">
+            <td th:text="${an.url}"></td>
+            <td th:class="${an.state.name()} == 'UP' ? success : danger" th:text="${an.state.name()}"></td>
+            <td th:text="${an.threadCount}"></td>
+            <td th:text="${an.queueSize}"></td>
+            <td th:text="${an.metrics.heap - an.metrics.heap_used}"></td>
+            <td th:text="${#dates.format(an.updatedTime, 'dd MMM yyyy HH:mm:ss')}"></td>
+        </tr>
+        </tbody>
+    </table>
+    <div class="container-fluid">
+        <div th:include="fragments/table :: pager"/>
     </div>
-    </p>
+    </div>
+    <div th:include="fragments/table :: clickable"/>
 </section>
 
 </body>
