--- a/archivist/src/main/resources/templates/fields.html
+++ b/archivist/src/main/resources/templates/fields.html
@@ -7,15 +7,7 @@
 <body>
 
 <section layout:fragment="content">
-    <p>
-    <nav class="navbar navbar-default" style="border-width:0px; border-bottom-width: 1px">
-        <div class="container-fluid">
-            <div class="navbar-header navbar-brand">
-                <span class="fa fa-list" aria-hidden="true"></span>
-                Fields
-            </div>
-        </div>
-    </nav>
+    <div class="wrapper">
     <div class="container-fluid">
     <div th:each="type: ${fields}">
         <div class="panel panel-default">
@@ -31,7 +23,7 @@
         </div>
     </div>
     </div>
-    </p>
+    </div>
 </section>
 
 </body>
