--- a/archivist/src/main/resources/templates/fragments/folders.html
+++ b/archivist/src/main/resources/templates/fragments/folders.html
@@ -3,7 +3,7 @@
       layout:decorator="layout" xmlns:th="http://www.thymeleaf.org">
 <head></head>
 <body>
-<div th:fragment="folder_menu">
+<div th:fragment="menu">
     <nav class="navbar navbar-default navbar-shadow navbar-fixed-top secondnavbar" role="navigation" style="z-index: 999; border-width:0px; border-bottom-width: 1px">
         <div class="navbar-inner">
             <div class="container-fluid">
@@ -33,6 +33,44 @@
             </div>
         </div>
     </nav>
+</div>
+
+<div th:fragment="modal_create">
+
+<!-- Modal -->
+    <div class="modal fade" id="modalCreate" role="dialog">
+        <div class="modal-dialog">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close">&times;</button>
+                    <h4 class="modal-title">Create Folder</h4>
+                </div>
+                <div class="modal-body">
+                    <form id="createForm" autocomplete="off" action="#" role="form" th:action="@{/gui/folders/__${folder.id}__}" th:object="${folderSpec}" method="post">
+                        <div class="form-group">
+                            <label for="name">Name:</label>
+                            <input type="text" th:field="*{name}" class="form-control" id="name" name="name" required="true"/>
+                            <div class="alert alert-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></div>
+                        </div>
+                        <button type="submit" class="btn btn-default">Create</button>
+                        <input type="hidden" id="parentId" name="parentId" th:value="${folder.id}"/>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- If there are validation errros, show form again. -->
+    <div th:if="${errors}">
+        <script th:inline="javascript" type="text/javascript">
+            $(document).ready(function(e) {
+                $('#modalCreate').modal({'backdrop': 'static'});
+            });
+        </script>
+    </div>
 </div>
 </body>
 </html>
