--- a/archivist/src/main/resources/templates/import.html
+++ b/archivist/src/main/resources/templates/import.html
@@ -8,38 +8,20 @@
 <body>
 
 <section layout:fragment="content">
-    <div th:include="fragments/import_menu :: import_menu"/>
+    <div th:include="fragments/imports :: menu"/>
     <div class="wrapper">
         <table class="table table-striped table-hover">
             <tbody>
             <tr>
                 <td class="vert-align">
-                    <!-- Running -->
-                    <a th:if="${imp.state.name()} eq 'Active'" class="btn" th:href="@{/gui/imports/__${imp.id}__}" th:classappend="${imp.stats.assetErrored == 0} ? btn-success : btn-danger">
-                        <i class="fa fa-gears fa-lg fa-fw"></i></a>
-
-                    <a th:if="${imp.state.name()} eq 'Finished'" class="btn" th:href="@{/gui/imports/__${imp.id}__}" th:classappend="${imp.stats.assetErrored == 0} ? btn-success : btn-danger">
-                        <i class="fa fa-stop-circle-o fa-lg fa-fw"></i></a>
+                    <div th:include="fragments/imports :: state_label"/>
                 </td>
 
                 <td class="vert-align" th:text="${imp.name}"></td>
                 <td class="vert-align" th:text="${imp.userCreated}"></td>
                 <td class="vert-align" th:text="${#dates.format(imp.timeStarted, 'dd MMM yyyy HH:mm')}"></td>
                 <td class="col-md-4 vert-align">
-                    <div class="progress">
-                        <div class="progress-bar progress-bar-success" th:style="${'width: '+ imp.progress.success + '%'}">
-                            <span class="sr-only"></span>
-                        </div>
-                        <div class="progress-bar progress-bar-warning" th:style="${'width: '+ imp.progress.running + '%'}">
-                            <span class="sr-only"></span>
-                        </div>
-                        <div class="progress-bar progress-bar-info" th:style="${'width: '+ imp.progress.waiting + '%'}">
-                            <span class="sr-only"></span>
-                        </div>
-                        <div class="progress-bar progress-bar-danger" th:style="${'width: '+ imp.progress.failed + '%'}">
-                            <span class="sr-only"></span>
-                        </div>
-                    </div>
+                    <div th:include="fragments/imports :: progress"/>
                 </td>
             </tr>
             </tbody>
@@ -48,7 +30,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div id="leftContent" class="col-md-12" style="overflow-y:scroll; overflow-x:hidden;">
-                    <div th:include="fragments/asset_table :: asset_table"/></div>
+                    <div th:include="fragments/tasks :: task_table"/></div>
                 <div id="rightContent" class="hidden">
                     <div class="panel">
                     <div class="panel-header"><h4>Assets</h4></div>
@@ -83,7 +65,6 @@
         </div>
     </div>
 
-    <div th:include="fragments/import_modal :: import_modal"/>
     <script th:inline="javascript" type="text/javascript">
         $('#opener').on('click', function() {
             var panel = $('#rightContent');
@@ -99,6 +80,10 @@
             return false;
         });
     </script>
+
+    <div th:include="fragments/imports :: modal_create"/>
+    <div th:include="fragments/table :: clickable"/>
+
 </section>
 
 </body>
