--- a/archivist/src/main/resources/templates/plugins.html
+++ b/archivist/src/main/resources/templates/plugins.html
@@ -7,7 +7,7 @@
 <body>
 
 <section layout:fragment="content">
-    <div th:include="fragments/plugin_menu :: plugin_menu"/>
+    <div th:include="fragments/plugins :: menu"/>
     <div class="wrapper">
     <table class="table table-striped">
         <thead>
