--- a/archivist/src/main/resources/templates/user.html
+++ b/archivist/src/main/resources/templates/user.html
@@ -7,13 +7,10 @@
 <body>
 
 <section layout:fragment="content">
-    <p>
-    <div class="row">
-        <div class="col-lg-12">
-            <h1 class="page-header">Edit User</h1>
-        </div>
-    </div>
-    <div class="container col-sm-8">
+    <div th:include="fragments/users :: menu"/>
+    <div class="wrapper">
+    <div class="container-fluid">
+    <br/>
     <form id="updateUserForm" autocomplete="off" action="#" role="form" th:action="@{/gui/users/__${user.id}__}" th:object="${userUpdateBuilder}" method="post">
         <div class="form-group">
             <span class="glyphicon glyphicon-user" aria-hidden="true" th:text="${user.username}"/>
@@ -57,8 +54,7 @@
 
     </form>
     </div>
-    </p>
-
+    </div>
     <script th:inline="javascript" type="text/javascript">
         //<![CDATA[
         $(document).ready(function(e) {
